fixing styling on mobile confirmation page2

--- a/app/assets/stylesheets/desktop/web/_devise.scss
+++ b/app/assets/stylesheets/desktop/web/_devise.scss
@@ -24,7 +24,7 @@
 
 	input {
 		height: 30px;
-		width: 380px;
+		width: 90%;
 		font-size: 120%;
 		border-radius: 5px;
 		border-style: solid 0.1px gray;
