--- a/app/assets/stylesheets/desktop/web/_static_pages.scss
+++ b/app/assets/stylesheets/desktop/web/_static_pages.scss
@@ -170,6 +170,7 @@
 
 		@include mq-sp {
 			width: 90%;
+			height: 100%;
 			margin: 20px auto;
 			border-radius: 10px;
 		}
