--- a/app/assets/stylesheets/responsive-nav.css
+++ b/app/assets/stylesheets/responsive-nav.css
@@ -10,7 +10,7 @@ a.nav-toggle {
 
 a.nav-toggle.active {
   position: absolute;
-  margin: 155px 40px -50px;
+  margin: 175px 40px -50px;
 }
 
 
